ⅽ(⁄ ⁄•⁄▽⁄•⁄ ⁄)ↄ Done.